src/objects/ConfirmItem__c.object
<CustomObject>
    <customHelpPage>ConfirmItemCsh</customHelpPage>
    <fields>
        <fullName>ConfirmConfig__c</fullName>
        <label>Confirm Config</label>
        <referenceTo>ConfirmConfig__c</referenceTo>
        <relationshipLabel>Confirm Items</relationshipLabel>
        <relationshipName>ConfirmItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Confirm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DenySequence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What sequence to jump to if denied?</inlineHelpText>
        <label>Deny Sequence</label>
        <referenceTo>Sequence__c</referenceTo>
        <relationshipLabel>Confirm Items</relationshipLabel>
        <relationshipName>ConfirmItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deny__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deny</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EntityId__c</fullName>
        <externalId>true</externalId>
        <label>EntityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Confirm Item</label>
    <nameField>
        <label>Confirm Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Confirm Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>